--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.avisobg {
+  padding: 0;
+  background-color: #3F3F3F;
+  color: white;
+}
+
+.aviso {
+  color: white;
+  font-size: 14px;
+}
+
+.socialmedia {
+  background: #FFCE0B;
+  color: white;
+  font-size: 20px;
+
+  align-items: flex-start;
+  height: 25px;
+  padding-top: 0;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.navlogo {
+  background: #FFCE0B;
+  height: 80px;
+  align-items: start;
+}
+
+.navlogo img {
+  margin-left: 500px;
+}
+
+.navprincipal {
+  background: #FFCE0B;
+  text-align: end;
+
+}
+
+.items {
+  margin-left: 30%;
+}
+
+.nav-link {
+  font-family: 'Bebas Neue', cursive;
+  font-size: 30px;
+  color: white;
+}
+
+a:hover {
+  color: #25B7D3;
 }
